--- a/Sample Code/DJIWindowsSDKSample_x64/DJIWindowsSDKSample_x64.csproj
+++ b/Sample Code/DJIWindowsSDKSample_x64/DJIWindowsSDKSample_x64.csproj
@@ -227,7 +227,7 @@
   </ItemGroup>
   <ItemGroup>
     <Reference Include="DJIWindowsSDK">
-      <HintPath>..\..\WSDK Release\SDK dll x64\DJIWindowsSDK.dll</HintPath>
+      <HintPath>..\..\WSDK Libraries\SDK dll x64\DJIWindowsSDK.dll</HintPath>
     </Reference>
   </ItemGroup>
   <PropertyGroup Condition=" '$(VisualStudioVersion)' == '' or '$(VisualStudioVersion)' &lt; '14.0' ">
